repos/emily-python/contents/test/parser/fail/setType.em
# Set something not yet supported

# Arg: --ast2
# Expect failure

3 = 3
